mejora accuracy modelo

--- a/proyecto1.ipynb
+++ b/proyecto1.ipynb
@@ -1714,33 +1714,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reporte de Clasificación del Árbol de Decisión:\n",
+      "Mejores parámetros después de GridSearchCV: {'max_depth': 10, 'min_samples_leaf': 1, 'min_samples_split': 20}\n",
+      "Mejor puntaje de precisión después de GridSearchCV: 0.7701450431126192\n",
+      "Reporte de Clasificación del Mejor Modelo del Árbol de Decisión:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.82      0.80      0.81      1036\n",
-      "           1       0.48      0.51      0.49       373\n",
+      "           0       0.84      0.86      0.85      1036\n",
+      "           1       0.58      0.54      0.56       373\n",
       "\n",
-      "    accuracy                           0.73      1409\n",
-      "   macro avg       0.65      0.66      0.65      1409\n",
-      "weighted avg       0.73      0.73      0.73      1409\n",
+      "    accuracy                           0.77      1409\n",
+      "   macro avg       0.71      0.70      0.70      1409\n",
+      "weighted avg       0.77      0.77      0.77      1409\n",
       "\n",
-      "Matriz de Confusión:\n",
-      "[[833 203]\n",
-      " [184 189]]\n",
-      "Exactitud del Modelo: 0.7253371185237757\n"
+      "Matriz de Confusión del Mejor Modelo:\n",
+      "[[888 148]\n",
+      " [171 202]]\n",
+      "Exactitud del Mejor Modelo: 0.7735982966643009\n"
      ]
     }
    ],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
     "\n",
     "# Separar las características y la variable objetivo\n",
@@ -1750,20 +1752,31 @@
     "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Crear y entrenar el modelo de árbol de decisión\n",
-    "dtree = DecisionTreeClassifier(random_state=42)\n",
-    "dtree.fit(X_train, y_train)\n",
+    "# Parámetros para GridSearchCV\n",
+    "param_grid = {\n",
+    "    'max_depth': [10, 20, 30, None],\n",
+    "    'min_samples_split': [2, 10, 20],\n",
+    "    'min_samples_leaf': [1, 5, 10]\n",
+    "}\n",
     "\n",
-    "# Predecir los resultados para el conjunto de prueba\n",
-    "y_pred = dtree.predict(X_test)\n",
+    "# Crear el objeto GridSearchCV\n",
+    "grid_search = GridSearchCV(estimator=DecisionTreeClassifier(random_state=42), param_grid=param_grid, cv=5, scoring='accuracy')\n",
     "\n",
-    "# Evaluar el modelo\n",
-    "print(\"Reporte de Clasificación del Árbol de Decisión:\")\n",
-    "print(classification_report(y_test, y_pred))\n",
-    "print(\"Matriz de Confusión:\")\n",
-    "print(confusion_matrix(y_test, y_pred))\n",
-    "print(\"Exactitud del Modelo:\", accuracy_score(y_test, y_pred))\n",
-    "\n"
+    "# Ejecutar la búsqueda\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Mostrar los mejores parámetros y el puntaje\n",
+    "print(\"Mejores parámetros después de GridSearchCV:\", grid_search.best_params_)\n",
+    "print(\"Mejor puntaje de precisión después de GridSearchCV:\", grid_search.best_score_)\n",
+    "\n",
+    "# Usar el mejor modelo\n",
+    "best_model = grid_search.best_estimator_\n",
+    "y_pred_best = best_model.predict(X_test)\n",
+    "print(\"Reporte de Clasificación del Mejor Modelo del Árbol de Decisión:\")\n",
+    "print(classification_report(y_test, y_pred_best))\n",
+    "print(\"Matriz de Confusión del Mejor Modelo:\")\n",
+    "print(confusion_matrix(y_test, y_pred_best))\n",
+    "print(\"Exactitud del Mejor Modelo:\", accuracy_score(y_test, y_pred_best))\n"
    ]
   },
   {
