modelo 2 random forest

--- a/proyecto1.ipynb
+++ b/proyecto1.ipynb
@@ -1709,6 +1709,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### *3.3. Dividir los datos en conjuntos de entrenamiento y prueba*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separar las características y la variable objetivo\n",
+    "X = df.drop('Churn', axis=1)\n",
+    "y = df['Churn']\n",
+    "\n",
+    "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### *3.4. Modelo 1: Árbol de Decisión*"
    ]
   },
@@ -1745,12 +1766,6 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
     "\n",
-    "# Separar las características y la variable objetivo\n",
-    "X = df.drop('Churn', axis=1)\n",
-    "y = df['Churn']\n",
-    "\n",
-    "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Parámetros para GridSearchCV\n",
     "param_grid = {\n",
@@ -1788,10 +1803,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reporte de Clasificación de Random Forest:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.91      0.87      1036\n",
+      "           1       0.65      0.47      0.54       373\n",
+      "\n",
+      "    accuracy                           0.79      1409\n",
+      "   macro avg       0.74      0.69      0.70      1409\n",
+      "weighted avg       0.78      0.79      0.78      1409\n",
+      "\n",
+      "Matriz de Confusión de Random Forest:\n",
+      "[[942  94]\n",
+      " [199 174]]\n",
+      "Exactitud del Modelo de Random Forest: 0.7920511000709723\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "\n",
+    "\n",
+    "# Crear y entrenar el modelo de Random Forest\n",
+    "random_forest = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "random_forest.fit(X_train, y_train)\n",
+    "\n",
+    "# Predecir los resultados para el conjunto de prueba\n",
+    "y_pred_rf = random_forest.predict(X_test)\n",
+    "\n",
+    "# Evaluar el modelo\n",
+    "print(\"Reporte de Clasificación de Random Forest:\")\n",
+    "print(classification_report(y_test, y_pred_rf))\n",
+    "print(\"Matriz de Confusión de Random Forest:\")\n",
+    "print(confusion_matrix(y_test, y_pred_rf))\n",
+    "print(\"Exactitud del Modelo de Random Forest:\", accuracy_score(y_test, y_pred_rf))\n"
+   ]
   }
  ],
  "metadata": {
