modelo 2 random forest

--- a/proyecto1.ipynb
+++ b/proyecto1.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "max      72.000000      118.750000   8684.800000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
        "freq              3875             4171              2365  5174  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1803,49 +1803,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reporte de Clasificación de Random Forest:\n",
+      "Mejores parámetros después de GridSearchCV para Random Forest: {'bootstrap': True, 'max_depth': 20, 'min_samples_leaf': 5, 'min_samples_split': 2, 'n_estimators': 200}\n",
+      "Mejor puntaje de precisión después de GridSearchCV para Random Forest: 0.8029815555846248\n",
+      "Reporte de Clasificación del Mejor Modelo de Random Forest:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.91      0.87      1036\n",
-      "           1       0.65      0.47      0.54       373\n",
+      "           0       0.84      0.92      0.88      1036\n",
+      "           1       0.69      0.51      0.59       373\n",
       "\n",
-      "    accuracy                           0.79      1409\n",
-      "   macro avg       0.74      0.69      0.70      1409\n",
-      "weighted avg       0.78      0.79      0.78      1409\n",
+      "    accuracy                           0.81      1409\n",
+      "   macro avg       0.77      0.72      0.73      1409\n",
+      "weighted avg       0.80      0.81      0.80      1409\n",
       "\n",
-      "Matriz de Confusión de Random Forest:\n",
-      "[[942  94]\n",
-      " [199 174]]\n",
-      "Exactitud del Modelo de Random Forest: 0.7920511000709723\n"
+      "Matriz de Confusión del Mejor Modelo de Random Forest:\n",
+      "[[952  84]\n",
+      " [182 191]]\n",
+      "Exactitud del Mejor Modelo de Random Forest: 0.8112136266855926\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
     "\n",
+    "# Parámetros para GridSearchCV\n",
+    "param_grid_rf = {\n",
+    "    'n_estimators': [50, 100, 200],\n",
+    "    'max_depth': [10, 20, 30, None],\n",
+    "    'min_samples_split': [2, 10, 20],\n",
+    "    'min_samples_leaf': [1, 5, 10],\n",
+    "    'bootstrap': [True, False]\n",
+    "}\n",
     "\n",
-    "# Crear y entrenar el modelo de Random Forest\n",
-    "random_forest = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-    "random_forest.fit(X_train, y_train)\n",
+    "# Crear el objeto GridSearchCV para Random Forest\n",
+    "grid_search_rf = GridSearchCV(estimator=RandomForestClassifier(random_state=42),\n",
+    "                              param_grid=param_grid_rf,\n",
+    "                              cv=5,\n",
+    "                              scoring='accuracy')\n",
     "\n",
-    "# Predecir los resultados para el conjunto de prueba\n",
-    "y_pred_rf = random_forest.predict(X_test)\n",
+    "# Ejecutar la búsqueda para el conjunto de entrenamiento\n",
+    "grid_search_rf.fit(X_train, y_train)\n",
     "\n",
-    "# Evaluar el modelo\n",
-    "print(\"Reporte de Clasificación de Random Forest:\")\n",
+    "# Mostrar los mejores parámetros y el mejor puntaje\n",
+    "print(\"Mejores parámetros después de GridSearchCV para Random Forest:\", grid_search_rf.best_params_)\n",
+    "print(\"Mejor puntaje de precisión después de GridSearchCV para Random Forest:\", grid_search_rf.best_score_)\n",
+    "\n",
+    "# Usar el mejor modelo encontrado por GridSearchCV\n",
+    "best_rf_model = grid_search_rf.best_estimator_\n",
+    "\n",
+    "# Predicciones del mejor modelo Random Forest\n",
+    "y_pred_rf = best_rf_model.predict(X_test)\n",
+    "\n",
+    "# Reporte de Clasificación y Matriz de Confusión\n",
+    "print(\"Reporte de Clasificación del Mejor Modelo de Random Forest:\")\n",
     "print(classification_report(y_test, y_pred_rf))\n",
-    "print(\"Matriz de Confusión de Random Forest:\")\n",
+    "print(\"Matriz de Confusión del Mejor Modelo de Random Forest:\")\n",
     "print(confusion_matrix(y_test, y_pred_rf))\n",
-    "print(\"Exactitud del Modelo de Random Forest:\", accuracy_score(y_test, y_pred_rf))\n"
+    "print(\"Exactitud del Mejor Modelo de Random Forest:\", accuracy_score(y_test, y_pred_rf))\n"
    ]
   }
  ],
