--- a/proyecto1.ipynb
+++ b/proyecto1.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
        "max      72.000000      118.750000   8684.800000"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
        "freq              3875             4171              2365  5174  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1735,29 +1735,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mejores parámetros después de GridSearchCV: {'max_depth': 10, 'min_samples_leaf': 1, 'min_samples_split': 20}\n",
-      "Mejor puntaje de precisión después de GridSearchCV: 0.7701450431126192\n",
+      "Mejores parámetros después de GridSearchCV: {'criterion': 'entropy', 'max_depth': 20, 'max_features': 'sqrt', 'min_samples_leaf': 10, 'min_samples_split': 2, 'splitter': 'random'}\n",
+      "Mejor puntaje de precisión después de GridSearchCV: 0.7829223279395935\n",
       "Reporte de Clasificación del Mejor Modelo del Árbol de Decisión:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.84      0.86      0.85      1036\n",
-      "           1       0.58      0.54      0.56       373\n",
+      "           0       0.85      0.90      0.87      1036\n",
+      "           1       0.67      0.55      0.60       373\n",
       "\n",
-      "    accuracy                           0.77      1409\n",
-      "   macro avg       0.71      0.70      0.70      1409\n",
-      "weighted avg       0.77      0.77      0.77      1409\n",
+      "    accuracy                           0.81      1409\n",
+      "   macro avg       0.76      0.73      0.74      1409\n",
+      "weighted avg       0.80      0.81      0.80      1409\n",
       "\n",
       "Matriz de Confusión del Mejor Modelo:\n",
-      "[[888 148]\n",
-      " [171 202]]\n",
-      "Exactitud del Mejor Modelo: 0.7735982966643009\n"
+      "[[937  99]\n",
+      " [169 204]]\n",
+      "Exactitud del Mejor Modelo: 0.8097941802696949\n"
      ]
     }
    ],
@@ -1765,20 +1765,28 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
+    "# Normalización de los datos\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "# Parámetros para GridSearchCV\n",
     "param_grid = {\n",
+    "    'criterion': ['gini', 'entropy'],\n",
+    "    'splitter': ['best', 'random'],\n",
     "    'max_depth': [10, 20, 30, None],\n",
-    "    'min_samples_split': [2, 10, 20],\n",
-    "    'min_samples_leaf': [1, 5, 10]\n",
+    "    'min_samples_split': [2, 5, 10, 20],\n",
+    "    'min_samples_leaf': [1, 2, 5, 10],\n",
+    "    'max_features': [None, 'auto', 'sqrt', 'log2']\n",
     "}\n",
     "\n",
     "# Crear el objeto GridSearchCV\n",
     "grid_search = GridSearchCV(estimator=DecisionTreeClassifier(random_state=42), param_grid=param_grid, cv=5, scoring='accuracy')\n",
     "\n",
     "# Ejecutar la búsqueda\n",
-    "grid_search.fit(X_train, y_train)\n",
+    "grid_search.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Mostrar los mejores parámetros y el puntaje\n",
     "print(\"Mejores parámetros después de GridSearchCV:\", grid_search.best_params_)\n",
@@ -1786,7 +1794,8 @@
     "\n",
     "# Usar el mejor modelo\n",
     "best_model = grid_search.best_estimator_\n",
-    "y_pred_best = best_model.predict(X_test)\n",
+    "y_pred_best = best_model.predict(X_test_scaled)\n",
+    "\n",
     "print(\"Reporte de Clasificación del Mejor Modelo del Árbol de Decisión:\")\n",
     "print(classification_report(y_test, y_pred_best))\n",
     "print(\"Matriz de Confusión del Mejor Modelo:\")\n",
@@ -1803,32 +1812,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 191,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mejores parámetros después de GridSearchCV para Random Forest: {'bootstrap': True, 'max_depth': 20, 'min_samples_leaf': 5, 'min_samples_split': 2, 'n_estimators': 200}\n",
-      "Mejor puntaje de precisión después de GridSearchCV para Random Forest: 0.8029815555846248\n",
-      "Reporte de Clasificación del Mejor Modelo de Random Forest:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.84      0.92      0.88      1036\n",
-      "           1       0.69      0.51      0.59       373\n",
-      "\n",
-      "    accuracy                           0.81      1409\n",
-      "   macro avg       0.77      0.72      0.73      1409\n",
-      "weighted avg       0.80      0.81      0.80      1409\n",
-      "\n",
-      "Matriz de Confusión del Mejor Modelo de Random Forest:\n",
-      "[[952  84]\n",
-      " [182 191]]\n",
-      "Exactitud del Mejor Modelo de Random Forest: 0.8112136266855926\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
@@ -1885,7 +1871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
