--- a/proyecto1.ipynb
+++ b/proyecto1.ipynb
@@ -1773,13 +1773,14 @@
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
     "# Parámetros para GridSearchCV\n",
+    "# Ampliar la búsqueda de hiperparámetros para incluir más opciones de configuración del árbol de decisión\n",
     "param_grid = {\n",
-    "    'criterion': ['gini', 'entropy'],\n",
-    "    'splitter': ['best', 'random'],\n",
-    "    'max_depth': [10, 20, 30, None],\n",
-    "    'min_samples_split': [2, 5, 10, 20],\n",
-    "    'min_samples_leaf': [1, 2, 5, 10],\n",
-    "    'max_features': [None, 'auto', 'sqrt', 'log2']\n",
+    "    'criterion': ['gini', 'entropy'],                # Criterio para medir la calidad de la división\n",
+    "    'splitter': ['best', 'random'],                  # Estrategia utilizada para dividir en cada nodo\n",
+    "    'max_depth': [10, 20, 30, None],                 # Profundidad máxima del árbol\n",
+    "    'min_samples_split': [2, 5, 10, 20],             # Número mínimo de muestras necesarias para dividir un nodo\n",
+    "    'min_samples_leaf': [1, 2, 5, 10],               # Número mínimo de muestras necesarias en un nodo hoja\n",
+    "    'max_features': [None, 'auto', 'sqrt', 'log2']   # Número de características a considerar al buscar la mejor división\n",
     "}\n",
     "\n",
     "# Crear el objeto GridSearchCV\n",
