--- a/proyecto1.ipynb
+++ b/proyecto1.ipynb
@@ -2207,7 +2207,12 @@
     "y = df['Churn']\n",
     "\n",
     "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Normalización de los datos\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
    ]
   },
   {
@@ -2250,13 +2255,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# Normalización de los datos\n",
-    "scaler = StandardScaler()\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
     "# Parámetros para GridSearchCV\n",
     "# Ampliar la búsqueda de hiperparámetros para incluir más opciones de configuración del árbol de decisión\n",
     "param_grid = {\n",
