--- a/proyecto1.ipynb
+++ b/proyecto1.ipynb
@@ -2179,8 +2179,11 @@
    "source": [
     "##### *2.6. Conclusiones*\n",
     "\n",
-    "# TODO\n",
-    "\n"
+    "El análisis revela varios factores que parecen estar correlacionados con la propensión de los clientes a abandonar los servicios (churn). La duración del contrato (tenure) muestra una fuerte correlación negativa con el churn, sugiriendo que los clientes que permanecen más tiempo con la empresa son menos propensos a abandonar. El tipo de servicio de internet, específicamente la fibra óptica, está correlacionado con el churn, lo que podría indicar problemas de satisfacción o precios más altos asociados con este servicio. Los contratos a largo plazo (especialmente los de dos años) están correlacionados con el churn, lo que implica que los compromisos a largo plazo reducen la probabilidad de abandono.\n",
+    "\n",
+    "Otros factores que muestran una correlación significativa con el churn incluyen el método de pago electrónico, la facturación sin papel, y la falta de servicios adicionales como seguridad en línea o soporte técnico. Curiosamente, los cargos mensuales más altos están asociados con una mayor probabilidad de abandono, mientras que los cargos totales más altos están asociados con una menor probabilidad. Esto podría sugerir que los clientes que han invertido más en total en los servicios de la empresa son menos propensos a abandonar, pero aquellos que pagan más mensualmente podrían estar buscando alternativas más económicas.\n",
+    "\n",
+    "Es importante notar que factores demográficos como el género tienen poca correlación con el churn, mientras que ser ciudadano senior muestra una correlación moderada. La presencia de dependientes o pareja está levemente correlacionada con el churn, lo que podría indicar que los clientes con responsabilidades familiares son más estables. En general, estos hallazgos sugieren que las estrategias para reducir el churn podrían enfocarse en mejorar la satisfacción con los servicios de fibra óptica, ofrecer incentivos para contratos a largo plazo, y proporcionar servicios adicionales que aumenten el valor percibido por el cliente.\n"
    ]
   },
   {
