--- a/proyecto1.ipynb
+++ b/proyecto1.ipynb
@@ -2827,7 +2827,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### *5.  Conclusiones*"
+    "#### *5.  Conclusiones*\n",
+    "\n",
+    "En este proyecto, se aplicaron métodos de interpretación modelo-agnósticos, específicamente SHAP, para analizar y explicar las predicciones de churn de clientes en el sector de telecomunicaciones. Se implementaron modelos de predicción de churn, como árboles de decisión y Random Forest, y se utilizó SHAP para entender la influencia de diversas características en las predicciones del modelo.\n",
+    "\n",
+    "Los resultados del análisis revelaron varios factores que están correlacionados con la propensión de los clientes a abandonar los servicios. La duración del contrato, el tipo de servicio de internet, los contratos a largo plazo, el método de pago electrónico, la facturación sin papel, y la falta de servicios adicionales como seguridad en línea o soporte técnico, son algunos de los factores que muestran una correlación significativa con el churn. Los cargos mensuales más altos están asociados con una mayor probabilidad de abandono, mientras que los cargos totales más altos están asociados con una menor probabilidad.\n",
+    "\n",
+    "Al observar las gráficas de summary plots, dependence plots y force plots, se pudo identificar cómo diferentes características influyen en las predicciones del modelo y cómo estas características interactúan entre sí. Por ejemplo, se observó que los clientes con contratos a largo plazo y servicios adicionales tienden a tener una menor probabilidad de abandono, mientras que los clientes con cargos mensuales más altos y servicios de fibra óptica tienden a tener una mayor probabilidad de abandono.\n",
+    "\n",
+    "En general, este proyecto demuestra cómo SHAP puede proporcionar analíticas detalladas y comprensibles sobre las predicciones de modelos complejos de machine learning, lo que permite a los stakeholders identificar factores clave que influyen en el churn de clientes y tomar decisiones basadas en datos para mejorar la retención de clientes en el sector de telecomunicaciones."
    ]
   }
  ],
